[package]
name = "pallet-poa-rpc-runtime-api"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1.0", default-features = false }

# Substrate primitives
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
sp-std = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }

# Jupiter pallets
pallet-poa = { path = "../../../poa", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",

  "sp-api/std",
  "sp-runtime/std",
  "sp-std/std",

  "pallet-poa/std",
]
